shaarli/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: shaarli
  labels:
    app: shaarli
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: shaarli
